syntax = "proto3";

option csharp_namespace = "Auth.Grpc";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message LogoutRequest {
  string accessToken = 1;
  string refreshToken = 2;
}

message LogoutResponse {
  bool success = 1;
}